# quake-stuff

./: .gitignore  .gitmodules  Makefile.n64  README
c9x/: .gitignore  build_linux.sh  build_unix.py  cl_parse.c  common.c  common.h  host.c  progs.h  quakedef.h  r_misc.c  sound.h  sv_main.c  sys_null.c  zone.h
c9x/q1render/ref_soft/: d_init.c
c9x/q1src/: common.c  pr_edict.c
c9x/q1src/client/: host.c  host_cmd.c  pr_cmds.c  pr_exec.c
c9x/q1src/qcommon/: mathlib.h  quakedef.h  zone.c
c9x/q2render/ref_gl/: gl_image.c
c9x/q2src/client/: cl_main.c  cl_parse.c  cl_scrn.c  menu.c  snd_dma.c  snd_loc.h
c9x/q2src/qcommon/: files.c  qcommon.h
c9x/q2src/server/: server.h  sv_game.c
c9x/sys/sdl/: in_sdl.c  net_linux.c  snd_dma.c  snd_mem.c  snd_mix.c  snd_sdl.c  swimp_sdl.c  sys_sdl.c  vid_sdl.c
frankenquake/: CMakeLists.txt
frankenquake/client/: cl_input.c  cl_main.c  cl_parse.c  cl_view.c
frankenquake/console/: console.c
frankenquake/game/quake2/: g_items.c  g_main.c  q_shared.h
frankenquake/misc/: cmd.c  cmd.h  common.c  keys.c  mathlib.h  menu.c  sbar.c  view.c  zone.c
frankenquake/network/: net.h  net_main.c  net_udp.c
frankenquake/progs/: pr_cmds.c  pr_edict.c  pr_exec.c
frankenquake/qcommon/: common.c  common.h  d_local.h  draw.c  gl_model.h  glquake.h  host.c  host_cmd.c  keys.h  model.h  qcommon.h  quakedef.h  r_local.h  r_shared.h  ref.h  screen.c  sound.h  sys.h
frankenquake/render/ref_gl/: gl_draw.c  gl_local.h  gl_mesh.c  gl_model.c  gl_rmain.c  gl_rmisc.c  gl_rsurf.c  gl_screen.c  gl_warp.c  r_part.c
frankenquake/render/ref_rdpq/: d_edge.c  d_fill.c  d_init.c  d_modech.c  d_part.c  d_polyse.c  d_scan.c  d_sprite.c  d_zpoint.c  model.c  r_bsp.c  r_light.c  r_main.c  r_surf.c  screen.c
frankenquake/render/ref_soft/: d_edge.c  d_fill.c  d_init.c  d_part.c  d_polyse.c  d_scan.c  model.c  r_alias.c  r_draw.c  r_edge.c  r_local.h  r_main.c  r_misc.c  screen.c
frankenquake/server/: server.h  sv_main.c  sv_move.c
frankenquake/sound/: snd_dma.c  snd_loc.h  snd_mem.c  snd_mix.c
frankenquake/sys/n64/: in_null.c  joy_n64.c  joy_n64.h  snd_null.c  sys_null.c  vid_null.c
frankenquake/sys/sdl/: in_null.c  snd_null.c  sys_null.c  vid_null.c
